@@ -11,6 +11,7 @@
          ManyToManyField and OneToOneField.
          (resolves issue 15)
 
+CHANGED: Custom fields are extended instead of overridden.
 CHANGED: Factored out settings into a separate settings.py and consistently
          used an app specific settings prefix.
 CHANGED: Refactored creation of translation fields and added handling of
